--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ SimpleStuff/.vs/SimpleStuff/v15/Server/sqlite3/storage.ide-shm
 SimpleStuff/.vs/SimpleStuff/v15/Server/sqlite3/storage.ide
 SimpleStuff/.vs/SimpleStuff/v15/Server/sqlite3/db.lock
 SimpleStuff/.vs/SimpleStuff/v15/.suo
+SimpleStuff/SimpleStuff/obj/Debug/SimpleStuff.csprojAssemblyReference.cache
