started to use player class

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ SimpleStuff/SimpleStuff/obj/Debug/SimpleStuff.csproj.CopyComplete
 SimpleStuff/SimpleStuff/bin/Debug/Newtonsoft.Json.xml
 SimpleStuff/SimpleStuff/bin/Debug/Newtonsoft.Json.dll
 SimpleStuff/SimpleStuff/bin/Debug/Matt.json
+SimpleStuff/SimpleStuff/bin/Debug/zach.json
